add search and fix filter in sell/buy pages